# bank-churn-prediction

./: .gitignore  CHANGELOG.md  README.md  REPORT.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
models/: best_threshold.json  lr_model.pkl  model.pkl
outputs/: feature_importance.csv  lr_coefficients.csv  metrics.json  risk_scores.csv  threshold_comparison.csv
src/: evaluate.py  generate_synthetic_data.py  predict.py  train.py  utils.py
